--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
   "dependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
     "vue": "^3.2.45",
     "vuex": "^4.1.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-typescript": "^7.18.6",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
+  },
+  "scripts": {
+    "build": "webpack --mode production"
+  },
+  "scripts": {
+    "build": "babel src -d dist"
   }
+  
 }
